@@ -1,5 +1,5 @@
 /*
-    Copyright 2015, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2015-2017, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -8,6 +8,7 @@
 
 #include "fost-core.hpp"
 #include <fost/module.hpp>
+
 #include <mutex>
 
 
@@ -28,21 +29,11 @@ namespace {
             return n;
         }
     }
-    fostlib::jcursor as_jc(const fostlib::module * const p, const fostlib::nliteral n) {
-        if ( p ) {
-            return p->as_jcursor() / n;
-        } else {
-            return fostlib::jcursor(n);
-        }
-    }
-    fostlib::json as_js(const fostlib::module * const p, const fostlib::nliteral n) {
-        return fostlib::coerce<fostlib::json>(as_jc(p, n));
-    }
 }
 
 
 fostlib::json fostlib::module::as_json() const {
-    return as_js(parent, name);
+    return coerce<json>(as_jcursor());
 }
 
 
@@ -52,6 +43,14 @@ fostlib::string fostlib::module::as_string() const {
 
 
 fostlib::jcursor fostlib::module::as_jcursor() const {
-    return as_jc(parent, name);
+    if ( parent ) {
+        if ( name_str ) {
+            return parent->as_jcursor() / jcursor::split(name_str.value(), "/");
+        } else {
+            return parent->as_jcursor() / name;
+        }
+    } else {
+        return fostlib::jcursor(name);
+    }
 }
 
