@@ -1,3 +1,6 @@
+2017-01-27  Kirit Saelensminde  <kirit@felspar.com>
+ * Add better support for "dynamic" modules.
+
 2017-01-25  Kirit Saelensminde  <kirit@felspar.com>
  Add support for stderr to the stdout logger.
 
